--- a/Chat v.1.3/app/views/auth/log_in.html.erb
+++ b/Chat v.1.3/app/views/auth/log_in.html.erb
@@ -12,15 +12,15 @@
           <strong>   Login My Friend </strong>
         </div>
         <div class="panel-body">
-          <form role="form" action="handler" method="post">
+          <form role="form" action="handler" method="post" data-toggle="validator">
             <br/>
             <div class="form-group input-group">
               <span class="input-group-addon">@</span>
-              <input type="text" class="form-control" name="login" placeholder="Your Email" />
+              <input type="text" class="form-control" name="login" placeholder="Your Email" required />
             </div>
             <div class="form-group input-group">
               <span class="input-group-addon"><i class="fa fa-lock"  ></i></span>
-              <input type="password" class="form-control" name="passwd" placeholder="Enter Password" />
+              <input type="password" class="form-control" name="passwd" placeholder="Enter Password" required />
             </div>
             <button type="submit" class="btn btn-success">Let's Rock </button>
 
