--- a/Chat v.1.3/app/views/auth/registration.html.erb
+++ b/Chat v.1.3/app/views/auth/registration.html.erb
@@ -12,19 +12,22 @@
           <strong>   Register Yourself </strong>
         </div>
         <div class="panel-body">
-          <form role="form" action="handler_registration" method="post">
+          <form role="form" action="handler_registration" method="post" data-toggle="validator">
             <br/>
             <div class="form-group input-group">
               <span class="input-group-addon"><i class="fa fa-circle-o-notch"  ></i></span>
-              <input type="text" class="form-control" name="name" placeholder="Your Name" />
+              <input type="text" class="form-control" name="name" placeholder="Your Name" required />
             </div>
                         <div class="form-group input-group">
               <span class="input-group-addon">@</span>
-              <input type="text" class="form-control" name="login" placeholder="Your Email" />
+                          <div class="form-group">
+                            <input type="email" class="form-control"  name="login" id="inputEmail" placeholder="example@example.com" data-error="Bruh, that email address is invalid" required>
+                          </div>
+
             </div>
             <div class="form-group input-group">
               <span class="input-group-addon"><i class="fa fa-lock"  ></i></span>
-              <input type="password" class="form-control" name="passwd" placeholder="Enter Password" />
+              <input type="password" data-minlength="7" class="form-control" id="inputPassword" placeholder="At least 6 characters" name="passwd" required>
             </div>
             <button type="submit" class="btn btn-success">Register me</button>
 
