--- a/Chat v.1.3/app/assets/stylesheets/application.css.sass
+++ b/Chat v.1.3/app/assets/stylesheets/application.css.sass
@@ -15,7 +15,8 @@
  */
 @import "bootstrap-sprockets"
 @import "bootstrap"
-
+@import "font-awesome-sprockets"
+@import "font-awesome"
 #hedReg
   margin-top: 50px
 #hedLog
