--- a/rails_postgres_websockets_chat-master/app/views/layouts/application.html.erb
+++ b/rails_postgres_websockets_chat-master/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
     <div id="navbar" class="navbar-collapse collapse">
-      <a class="navbar-brand" href="/">Chat v 1.2</a>
-      <a class="navbar-brand" href="/chat">Home</a>
+      <a class="navbar-brand" href="/">Home</a>
+      <a class="navbar-brand" href="/chat">Chat</a>
       <button type="submit" class="btn btn-success btn-lg pull-right" data-toggle="modal" data-target="#login-modal">Sign in</button>
     </div><!--/.navbar-collapse -->
   </div>
