--- a/rails_postgres_websockets_chat-master/app/views/auth/index.html.erb
+++ b/rails_postgres_websockets_chat-master/app/views/auth/index.html.erb
@@ -2,8 +2,8 @@
 <div class="jumbotron">
   <div class="container" id="index_cont">
     <hr class="prettyline">
-    <h1>Welcome to Chat v 1.2!</h1>
-    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+    <h1>Welcome to Chat v 1.5!</h1>
+    <p>Hi, this is my first Rails chat app using Postgres + Faye websockets. Check it out here <a href="https://github.com/Cr4f7y/Rails/tree/master/rails_postgres_websockets_chat-master">GitHub</a></p>
     <!-- Button trigger modal -->
 
         <!-- BEGIN # MODAL LOGIN -->
