--- a/rails_postgres_websockets_chat-master/app/views/auth/index.html.erb
+++ b/rails_postgres_websockets_chat-master/app/views/auth/index.html.erb
@@ -25,7 +25,10 @@
                   <div id="icon-login-msg" class="glyphicon glyphicon-chevron-right"></div>
                   <span id="text-login-msg">Type your Email and password.</span>
                 </div>
-                <input name="email" class="form-control" type="text" placeholder="Email" required>
+                <div class="form-group">
+                  <input name=email type="email" class="form-control" id="inputEmail" placeholder="Email" data-error="Bruh, that email address is invalid" required>
+                  <div class="help-block with-errors"></div>
+                </div>
                 <input name="passwd" class="form-control" type="password" placeholder="Password" required>
               </div>
               <div class="modal-footer">
@@ -33,6 +36,7 @@
                   <button type="submit" class="btn btn-primary btn-lg btn-block">Login</button>
                 </div>
                 <div>
+
                   <center>
                   <p class="p_form" style="color:blueviolet">Dont have an account ?<button id="login_register_btn" type="button" class="btn btn-link">Register!</button></p>
                   </center>
@@ -43,15 +47,23 @@
             <!-- End # Login Form -->
 
           <!-- Begin | Register Form -->
-            <form id="register-form" style="display:none;" action="/registrationHandler" method="post" >
+            <form id="register-form" style="display:none;" action="/registrationHandler" method="post" data-toggle="validator" role="form">
               <div class="modal-body">
                 <div id="div-register-msg">
                   <div id="icon-register-msg" class="glyphicon glyphicon-chevron-right"></div>
                   <span id="text-register-msg">Register an account.</span>
                 </div>
-                <input name="name" class="form-control" type="text" placeholder="Username" required>
-                <input name="email" class="form-control" type="text" placeholder="E-Mail" required>
-                <input name="passwd" class="form-control" type="password" placeholder="Password" required>
+                <div class="form-group">
+                   <input name=name type="text" class="form-control" id="inputName" placeholder="Name" required>
+                </div>
+                <div class="form-group">
+                  <input name=email type="email"  class="form-control" id="inputEmail" placeholder="Email" data-error="Bruh, that email address is invalid" required>
+                  <div class="help-block with-errors"></div>
+                </div>
+                <div class="form-group">
+                  <input type="password" data-minlength="6" class="form-control" id="inputPassword" placeholder="Password" data-error="At least 6 characters" required>
+                  <div class="help-block with-errors"></div>
+                </div>
               </div>
               <div class="modal-footer">
                 <div>
@@ -75,6 +87,9 @@
     <!-- END # MODAL LOGIN -->
     <hr class="prettyline">
 <footer>
+  <%= mail_to "oleksandr.burkov@gmail.com" do %>
+      <center><strong>Email Me:</strong> <span>oleksandr.burkov@gmail.com</span></center>
+  <% end %>
   <p align="center">&copy; CR4F7Y 2015</p>
 </footer>
 </div>
