--- a/rails_postgres_websockets_chat-master/app/assets/stylesheets/application.css.scss
+++ b/rails_postgres_websockets_chat-master/app/assets/stylesheets/application.css.scss
@@ -73,8 +73,13 @@ ul.list-unstyled{
 }
 
 
-
-
+.alert {
+  height: 50px;
+  position: absolute;
+  right: 0;
+  left: 0;
+  text-align: center;
+}
 
 
 
