--- a/notes_nice/app/views/layouts/_header.html.erb
+++ b/notes_nice/app/views/layouts/_header.html.erb
@@ -7,18 +7,18 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Project name</a>
+      <a class="navbar-brand" href="/">Note app</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse pull-right" aria-expanded="false" style="height: 1.11111px;">
       <ul class="nav navbar-nav">
         <li><%= link_to "Home", root_path %></li>
         <% if signed_in? %>
-         <li><%= link_to "Users", '#' %></li>
+         <li><%= link_to "Users", users_path %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to "Profile", current_user %></li>
-            <li><%= link_to "Settings", '#' %></li>
+            <li><%= link_to "Settings", edit_user_path(current_user) %></li>
             <li class="divider"></li>
             <li>
               <%= link_to "Sign out", signout_path, method: "delete" %>
