--- a/notes_nice/app/views/static_pages/home.html.erb
+++ b/notes_nice/app/views/static_pages/home.html.erb
@@ -1,11 +1,13 @@
 <div class="center hero-unit">
-  <h1>Welcome to the Sample App</h1>
+  <h1>Welcome to the Note App</h1>
 
   <h2>
     This is the home page for the
-    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
+    <a href="https://github.com/Cr4f7y/Rails/tree/master/notes_nice">Note App</a>
     sample application.
   </h2>
 
   <%= link_to "Sign up now!", 'signup', class: "btn btn-large btn-primary" %>
 </div>
+
+<br>
