--- a/notes_nice/app/assets/stylesheets/static_pages.scss
+++ b/notes_nice/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,30 @@
 // Place all the styles related to the static_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+div#Profile{
+  .microposts {
+    list-style: none;
+    margin: 10px 0 0 0;
+
+    li {
+      padding: 10px 0;
+      border-top: 1px solid #e8e8e8;
+    }
+  }
+  .content {
+    display: block;
+  }
+  .timestamp {
+    color: lightgray;
+  }
+  .gravatar {
+    float: left;
+    margin-right: 10px;
+  }
+  aside {
+    textarea {
+      height: 100px;
+      margin-bottom: 5px;
+    }
+  }
+}
