--- a/notes_nice/app/views/users/new.html.erb
+++ b/notes_nice/app/views/users/new.html.erb
@@ -4,7 +4,7 @@
   <h1>Sign up</h1>
   <div class="col-md-4 col-md-offset-4">
     <%= form_for @user, html: { class: "input-form"} do |f|  %>
-        <%= render 'shared/error_messages' %>
+        <%= render 'shared/error_messages', object: f.object %>
         <div class="form-group ">
             <%= f.label :name %>
             <%= f.text_field :name , class: "form-control"%>
