--- a/notes_nice/app/views/users/show.html.erb
+++ b/notes_nice/app/views/users/show.html.erb
@@ -1,16 +1,21 @@
 <% provide(:title, @user.name) %>
-<div class="container">
-      <div class="col-md-6">
-        <%= gravatar_for @user %>
-        <%= @user.name %>
-      </div>
-  <div class="col-md-6">
-  <% if @user.microposts.any? %>
-      <h3>Microposts (<%= @user.microposts.count %>)</h3>
-      <ol class="microposts">
-        <%= render @microposts %>
-      </ol>
-      <%= will_paginate @microposts %>
-  <% end %>
+<div class="container-fluid" id="Profile">
+  <div class="row">
+
+    <div class="col-xs-6">
+      <%= gravatar_for @user %>
+      <%= @user.name %>
+    </div>
+
+    <div class="col-xs-6">
+           <% if @user.microposts.any? %>
+          <h3>Microposts (<%= @user.microposts.count %>)</h3>
+          <ol class="microposts">
+            <%= render @microposts %>
+          </ol>
+          <%= will_paginate @microposts %>
+      <% end %>
+
+    </div>
   </div>
 </div>
