--- a/notes_nice/app/views/static_pages/home.html.erb
+++ b/notes_nice/app/views/static_pages/home.html.erb
@@ -4,11 +4,11 @@
 
         <div class="col-xs-6">
           <%= render 'shared/user_info' %>
+          <%= render 'shared/micropost_form' %>
         </div>
 
         <div class="col-xs-6">
-
-          <%= render 'shared/micropost_form' %>
+          <%= render 'shared/feed' %>
 
         </div>
       </div>
