--- a/notes_nice/app/views/layouts/_header.html.erb
+++ b/notes_nice/app/views/layouts/_header.html.erb
@@ -12,6 +12,16 @@
     <div id="navbar" class="navbar-collapse collapse pull-right" aria-expanded="false" style="height: 1.11111px;">
       <ul class="nav navbar-nav">
         <li><%= link_to "Home", root_path %></li>
+         <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Steam <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Main", index_path %></li>
+            <li class="divider"></li>
+            <li>
+              <%= link_to "Sign out", reset_path, method: "delete" %>
+            </li>
+          </ul>
+        </li>
         <% if signed_in? %>
          <li><%= link_to "Users", users_path %></li>
         <li class="dropdown">
